--- a/SeisSol_setup/Ridgecrest_fault.yaml
+++ b/SeisSol_setup/Ridgecrest_fault.yaml
@@ -17,17 +17,7 @@
 [RS_sl0]: !ConstantMap
   map:
     RS_sl0: 0.2
-[rs_srW]: !LayeredModel
-  map: !AffineMap
-    matrix:
-      z0: [0.0, 0.0, 1.0]
-    translation:
-      z0: 0
-  interpolation: linear
-  parameters: [rs_srW]
-  nodes:
-     10e10:   [0.1]
-     1500.0:  [0.1]
-     -4000.0: [0.1]
-     -10e10:  [0.1]
-
+[rs_srW]: !ConstantMap
+  map:
+    rs_srW: 0.1
+    
